AM_CFLAGS                     = $(FSAL_CFLAGS) $(SEC_CFLAGS)


noinst_LTLIBRARIES            = libcache_content_policy.la



libcache_content_policy_la_SOURCES = cache_content_cache_behaviour.c   \
                                     ../include/cache_content.h        \
                                     ../include/cache_content_policy.h \
                                     ../include/log.h        \
                                     ../include/HashData.h             \
                                     ../include/HashTable.h            \
                                     ../include/fsal.h                 \
                                     ../include/cache_inode.h


new: clean all 
