noinst_LTLIBRARIES            = libhashtable.la

libhashtable_la_SOURCES       = HashTable.c                \
                                ../include/HashTable.h     \
                                ../include/HashData.h      \
                                ../include/err_HashTable.h
   
new: clean all
